--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   change_app_package_name: ^1.1.0
   flutter_launcher_icons: ^0.11.0
   package_info_plus: ^3.0.2
+  firebase_core: ^2.4.1
+  firebase_analytics: ^10.1.0
 
 dev_dependencies:
   flutter_test:
