Added firebase auth integration example

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   package_info_plus: ^3.0.2
   firebase_core: ^2.4.1
   firebase_analytics: ^10.1.0
+  firebase_auth: ^4.2.5
 
 dev_dependencies:
   flutter_test:
