--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   firebase_core: ^2.4.1
   firebase_analytics: ^10.1.0
   firebase_auth: ^4.2.5
+  flutter_easyloading: ^3.0.5
+  google_sign_in: ^5.4.3
 
 dev_dependencies:
   flutter_test:
