--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   sign_in_with_apple: ^4.3.0
   crypto: ^3.0.2
   flutter_facebook_auth: ^5.0.7
+  google_mobile_ads: ^2.3.0
 
 dev_dependencies:
   flutter_test:
