--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -77,5 +77,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>GADApplicationIdentifier</key>
+	<string>$(ADMOB_ID)</string>
 </dict>
 </plist>
