--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,8 @@ app.*.map.json
 /lib/firebase_options_prod.dart
 
 *.jks
+firebase-distribution-creds-dev.json
+.env.production
+.env.development
+google-creds-prod.json
+applestore_key.p8
