--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   crypto: ^3.0.2
   flutter_facebook_auth: ^5.0.7
   google_mobile_ads: ^2.3.0
+  flutter_local_notifications: ^13.0.0
+  firebase_messaging: ^14.3.0
 
 dev_dependencies:
   flutter_test:
