--- a/ios/Runner/Runner.entitlements
+++ b/ios/Runner/Runner.entitlements
@@ -8,5 +8,10 @@
 	<array>
 		<string>Default</string>
 	</array>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:flutter-prestup.page.link</string>
+		<string>applinks:flutter-prestup-prod.page.link</string>
+	</array>
 </dict>
 </plist>
