--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   google_mobile_ads: ^2.3.0
   flutter_local_notifications: ^13.0.0
   firebase_messaging: ^14.3.0
+  firebase_dynamic_links: ^5.1.0
 
 dev_dependencies:
   flutter_test:
