--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_local_notifications: ^16.1.0
   firebase_messaging: ^14.3.0
   firebase_dynamic_links: ^5.1.0
+  dio: ^5.3.3
 
 dev_dependencies:
   flutter_test:
