Updated to flutter version 2.24.3

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,9 +12,11 @@
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
 
+        <!-- BEGIN REMOVE MOBILE ADS -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="@string/admob_id"/>
+        <!-- END REMOVE MOBILE ADS -->
 
         <activity
             android:name=".MainActivity"
