--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.4 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -36,27 +36,29 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  go_router: ^13.2.0
+  go_router: ^14.3.0
   easy_localization: ^3.0.1
   flutter_riverpod: ^2.1.3
   google_fonts: ^6.1.0
   shared_preferences: ^2.0.15
   freezed_annotation: ^2.2.0
   change_app_package_name: ^1.1.0
-  flutter_launcher_icons: ^0.13.1
-  package_info_plus: ^5.0.1
-  firebase_core: ^2.4.1
-  firebase_analytics: ^10.1.0
-  firebase_auth: ^4.2.5
+  flutter_launcher_icons: ^0.14.1
+  package_info_plus: ^8.1.0
+  firebase_core: ^3.6.0
+  firebase_analytics: ^11.3.3
+  firebase_auth: ^5.3.1
   flutter_easyloading: ^3.0.5
   google_sign_in: ^6.1.0
-  sign_in_with_apple: ^5.0.0
+  sign_in_with_apple: ^6.1.3
   crypto: ^3.0.2
   flutter_facebook_auth: ^6.0.0
-  google_mobile_ads: ^4.0.0
-  flutter_local_notifications: ^16.1.0
-  firebase_messaging: ^14.3.0
-  firebase_dynamic_links: ^5.1.0
+  # BEGIN REMOVE MOBILE ADS
+  google_mobile_ads: ^5.2.0
+  # END REMOVE MOBILE ADS
+  flutter_local_notifications: ^17.2.4
+  firebase_messaging: ^15.1.3
+  firebase_dynamic_links: ^6.0.8
   dio: ^5.3.3
 
 dev_dependencies:
@@ -68,7 +70,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.1
+  flutter_lints: ^5.0.0
   build_runner: ^2.3.3
   freezed: ^2.3.2
 
