--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   firebase_messaging: ^15.1.3
   firebase_dynamic_links: ^6.0.8
   dio: ^5.3.3
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
