--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,10 +39,10 @@ post_install do |installer|
     flutter_additional_ios_build_settings(target)
     target.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
-      xcconfig_path = config.base_configuration_reference.real_path
-      xcconfig = File.read(xcconfig_path)
-      xcconfig_mod = xcconfig.gsub(/DT_TOOLCHAIN_DIR/, "TOOLCHAIN_DIR")
-      File.open(xcconfig_path, "w") { |file| file << xcconfig_mod }
+      #xcconfig_path = config.base_configuration_reference.real_path
+      #xcconfig = File.read(xcconfig_path)
+      #xcconfig_mod = xcconfig.gsub(/DT_TOOLCHAIN_DIR/, "TOOLCHAIN_DIR")
+      #File.open(xcconfig_path, "w") { |file| file << xcconfig_mod }
     end
   end
 end
