--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,32 +35,31 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  go_router: ^14.3.0
-  easy_localization: ^3.0.1
-  flutter_riverpod: ^2.1.3
-  google_fonts: ^6.1.0
-  shared_preferences: ^2.0.15
-  freezed_annotation: ^2.2.0
   change_app_package_name: ^1.1.0
-  flutter_launcher_icons: ^0.14.1
-  package_info_plus: ^8.1.0
-  firebase_core: ^3.6.0
-  firebase_analytics: ^11.3.3
-  firebase_auth: ^5.3.1
+  cupertino_icons: ^1.0.2
+  crypto: ^3.0.6
+  dio: ^5.8.0+1
+  easy_localization: ^3.0.1
+  firebase_analytics: ^11.4.5
+  firebase_auth: ^5.5.2
+  firebase_core: ^3.13.0
+  firebase_messaging: ^15.2.5
   flutter_easyloading: ^3.0.5
-  google_sign_in: ^6.1.0
-  sign_in_with_apple: ^6.1.3
-  crypto: ^3.0.2
-  flutter_facebook_auth: ^6.0.0
-  # BEGIN REMOVE MOBILE ADS
-  google_mobile_ads: ^5.2.0
-  # END REMOVE MOBILE ADS
-  flutter_local_notifications: ^17.2.4
-  firebase_messaging: ^15.1.3
-  firebase_dynamic_links: ^6.0.8
-  dio: ^5.3.3
+  flutter_facebook_auth: ^7.1.1
+  flutter_launcher_icons: ^0.14.3
+  flutter_local_notifications: ^19.1.0
+  flutter_riverpod: ^2.6.1
   font_awesome_flutter: ^10.8.0
+  freezed_annotation: ^3.0.0
+  go_router: ^14.8.1
+  google_fonts: ^6.2.1
+  # BEGIN REMOVE MOBILE ADS
+  google_mobile_ads: ^6.0.0
+  # END REMOVE MOBILE ADS
+  google_sign_in: ^6.3.0
+  package_info_plus: ^8.3.0
+  shared_preferences: ^2.5.3
+  sign_in_with_apple: ^7.0.1
 
 dev_dependencies:
   flutter_test:
@@ -71,9 +70,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
+  build_runner: ^2.4.15
   flutter_lints: ^5.0.0
-  build_runner: ^2.3.3
-  freezed: ^2.3.2
+  freezed: ^3.0.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
