--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,11 @@
 *.swp
 .DS_Store
 .atom/
+.build/
 .buildlog/
 .history
 .svn/
+.swiftpm/
 migrate_working_dir/
 
 # IntelliJ related
@@ -52,3 +54,4 @@ firebase-distribution-creds-dev.json
 .env.development
 google-creds-prod.json
 applestore_key.p8
+latest-flutter/
