--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,19 +1,3 @@
-buildscript {
-    ext.kotlin_version = '1.9.22'
-    repositories {
-        google()
-        mavenCentral()
-    }
-
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        // BEGIN REMOVE MOBILE ADS
-        classpath 'com.google.gms:google-services:4.4.0'
-        // END REMOVE MOBILE ADS
-    }
-}
-
 allprojects {
     repositories {
         google()
@@ -21,9 +5,12 @@ allprojects {
     }
 }
 
-rootProject.buildDir = '../build'
+rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
+}
+subprojects {
+    project.evaluationDependsOn(":app")
 }
 
 tasks.register("clean", Delete) {
